--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2708,107 +2708,108 @@ stories:
   domain: http://www.crescent-news.com/
   link: https://www.crescent-news.com/on_the_wire/editors_pick/stocks-indexes-edge-higher-to-finish-off-a-wobbly-week/image_12acbea9-87ca-56e8-8567-c4fb17e65fb8.html
 images:
-- name: rockingchair-rockingchair-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-pond.jpg
-- name: sand-hand-sand-hand-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-diego-rivera1.jpg
-- name: oldhouse-granaryfield-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-wols.jpg
-- name: store-on-corner-store-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-post-modern.jpg
-- name: eduardo-eduardo-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-clean-view.jpg
-- name: old-school-house-old-schoolhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-umberto-bocc.jpg
-- name: docks-docks-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-kand-two.jpg
-- name: lincoln-memorial-lincolnmemorial-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-collage.jpg
-- name: nyc-flag-nycflag-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-gred-mash.jpg
-- name: powerlines-power-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-circuit.jpg
-- name: fence-mexico-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-cinnamon-rolls.jpg
-- name: school-clouds-church-clouds-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dali-three.jpg
-- name: yuma-bank-yuma-bak-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crunch-paper.jpg
-- name: downtown-los-angeles-downtown-la-satan-red.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-satan-red.JPG
-- name: downtown-los-angeles-downtown-la-hot-spicy.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-hot-spicy.JPG
-- name: rain-princess-IMG_7162.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7162.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-5.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-5.JPG
-- name: powerlines-power-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-light-dali.jpg
-- name: power-lines-power-lines-empty-space-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-attack-planes.jpg
-- name: carry-load-carryload-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crabapple.jpg
-- name: old-granary-field-granaryfield-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purp-paper.jpg
-- name: gypsy-wagon-gypsywagon-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-crafty-painting.jpg
-- name: yosemite-yosemite-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-really-hot.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-pablo-blue.jpg
-- name: nyc-flag-nycflag-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-circuit.jpg
-- name: subway-subway-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-dali.jpg
-- name: mosaic-face-mosaic-face-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-spagetti-accident.jpg
-- name: border-crossing-bordercrossing-colorful-blocks.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-blocks.png
-- name: stories-ellis-island-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-ellis-island-nazi-poster.jpg
-- name: windowmountain-window-mountain-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-really-hot.jpg
-- name: old-door-lock-old-door-lock-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-ww2-dresden.jpg
-- name: status-berlin-status-berlin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-colorful-dream.jpg
-- name: birdhouse-birdhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-aqua.jpg
-- name: wreck-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_4833.jpg
-- name: windowmountain-window-mountain-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-hot-spicy.jpg
-- name: oldsmallboat-oldsmallboat-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-plentiful.jpg
-- name: gypsymosaic-gypsy-eyes-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-space-pizza.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-bright-sand.jpg
-- name: oldhousecars-house-old-cars-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-space-pizza.jpg
-- name: udnie-IMG_3469.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_3469.jpg
-- name: gears-4882162452-fa3126b38d-b-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-post-modern.jpg
-- name: dragon-desert-desert-dragon-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-feed-people.jpg
-- name: oldtrain-oldtrain-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-electricity.jpg
-- name: beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
-- name: aws-s3-stories-downtheline-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-downtheline-dali-three.jpg
-- name: beach-clouds-lifeguard-beachclouds-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-space-pizza.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-constitution.jpg
-- name: supreme-court-supremecourt-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-rain.jpg
-- name: miamibeach-miamibeach-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-sand-paper.jpg
-- name: old-cabin-oldcabin-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-green-zuma.jpg
-- name: oldtrain-oldtrain-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-creativity.jpg
+- name: amusement-park-amusement-park-2-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crabapple.jpg
+- name: school-clouds-church-clouds-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit-3.jpg
+- name: aws-s3-stories-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-dali-three.jpg
+- name: flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
+- name: machine-road-machine-road-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-far-away.jpg
+- name: yosemite-yosemite-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dry-skin.jpg
+- name: power-lines-power-lines-empty-space.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space.jpg
+- name: walled-garden-walled-garden-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-far-away.jpg
+- name: berlinwall-DSC-0084-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-gan-vogh.jpg
+- name: gypsymosaic-gypsy-eyes-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-diego-rivera1.jpg
+- name: rockingchair-rockingchair-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-yellow-collage.jpg
+- name: containership-containership-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purple-pond.jpg
+- name: death-valley-death-valley-national-park-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-emily-carr.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
+- name: christianity-christianity-under-construction-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dark-dali.jpg
+- name: bordercrossing-bordercrossing-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-space-pizza.jpg
+- name: birdhouse-birdhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-circuit.jpg
+- name: oldbarn-oldbarn-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-really-hot.jpg
+- name: christianity-christianity-under-construction-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-post-modern.jpg
+- name: miamibeach-miamibeach-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-kandinsky-bv.jpg
+- name: oldhousecars-house-old-cars-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kandinsky-bv.jpg
+- name: oldhouse-oldhouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kand-two.jpg
+- name: statue-of-liberty-front-view-statueofliberty-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-colorful-dream.jpg
+- name: file-00-00-00-00 2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-00-00
+    2.jpg
+- name: school-clouds-church-clouds-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-granite.jpg
+- name: containership-containership-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-ww2-color.jpg
+- name: locked-up-steam-lock-up-steam-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-constitution.jpg
+- name: art-museum-art-museum-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-ww2-color.jpg
+- name: oldroad-old-road-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-oily-mcoilface.jpg
+- name: statue-of-liberty-front-view-statueofliberty-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-crabapple.jpg
+- name: berlinwall2-berlinwall-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-gred-mash.jpg
+- name: liberty-back-statue-liberty-back-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-constitution.jpg
+- name: lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
+- name: stories-new-31-156-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-31-156-800-500-0-max-0--1--1.jpg
+- name: old-door-lock-old-door-lock-2-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-rain.jpg
+- name: blossombar-oily-mcoilface-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-24-99.jpg
+- name: old-school-house-old-schoolhouse-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-free-woman.jpg
+- name: catacombs-catacombs-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-atari-missle.jpg
+- name: windowmountain-window-mountain-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-far-away.jpg
+- name: razorcliff-razorcliff-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-oily-mcoilface.jpg
+- name: fence-mexico-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crunch-paper.jpg
+- name: old-granary-field-oldhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-aqua.jpg
+- name: oldhousecars-house-old-cars-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-satan-red.jpg
+- name: old-house-oldhouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-clean-view.jpg
+- name: death-valley-death-valley-national-park-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-graham-sutherland.jpg
+- name: oldhotel-oldhotel-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colorful-blocks.jpg
+- name: school-clouds-church-clouds-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dark-rain.jpg
+- name: capital-battle-capitolbattle-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colored-circuits.jpg
+- name: oldroad-old-road-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-spagetti-accident.jpg
+- name: miamibeach-miamibeach-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dark-rain.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
 ---
 Faith Howe Named To The Deans List At Lincoln Memorial University.&nbsp;Its Never To Early For Some Football!.&nbsp;Life According To Tommy Chong.&nbsp;Mexico President Mixes Left, Conservative Policy In 1st Year.&nbsp;Idelson's Tenure At Hall Winds Down.&nbsp;Lutes Selected As Teacher Of The Year For Lennox School District.&nbsp;Legislature Sends Series Of Victims Rights Bills To Governors Desk.&nbsp;Weight Loss Support Groups.&nbsp;
